added more CompanyService and RestController and test

--- a/src/main/resources/templates/companys/create-form.html
+++ b/src/main/resources/templates/companys/create-form.html
@@ -1,7 +1,7 @@
 <form hx-post="/companys/create" hx-target="#companyList" hx-swap="outerHTML">
     
     <label for="price">Code:</label><br>
-      <input type="number" id="code" name="code"><br>
+      <input type="text" id="code" name="code"><br>
     
     <label for="name">Name:</label><br>
     <input type="text" id="name" name="name"><br>
