--- a/src/main/resources/templates/companys/edit-form.html
+++ b/src/main/resources/templates/companys/edit-form.html
@@ -1,10 +1,10 @@
-<form hx-post="/companys/edit/{id}" th:attrappend-hx-post="${company.companyId}" hx-target="#companyList" hx-swap="outerHTML">
+<form  th:attr="hx-post=@{/companys/edit/{id}(id=${company.companyId})}" hx-target="#companyList" hx-swap="outerHTML">
     
     <label for="price">Code:</label><br>
-     <input type="text" id="code" name="code" th:value="${company.companyCode}"><br>
+     <input type="text" id="companyCode" name="companyCode" th:value="${company.companyCode}"><br>
     
     <label for="name">Name:</label><br>
-    <input type="text" id="name" name="name" th:value="${company.companyName}"><br>
+    <input type="text" id="companyName" name="companyName" th:value="${company.companyName}"><br>
     
     <label for="description">Description:</label><br>
     <input type="text" id="description" name="description" th:value="${company.description}"><br>
