--- a/src/main/resources/templates/companys/companys.html
+++ b/src/main/resources/templates/companys/companys.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="container">
-    <h1>Companys</h1>
+    <h1>CompanysXXXXXXXXXXXXXXXXXXXXXXXXXXX</h1>
     <button class = "btn btn-primary" hx-get="/companys/new" hx-target="#company-form-modal" hx-trigger="click" data-bs-toggle="modal" data-bs-target="#company-form-modal">Add Company</button>
     <div id="company-list">
         <table class="table">
