Added some graphQL and made some changes to HTMX

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,6 +23,13 @@
                 hx-swap="outerHTML">
             Click Me!
         </button>
+
+            <button hx-get="/htmx/companys"
+                    hx-trigger="click"
+                    hx-target="#parent-div"
+                    hx-swap="outerHTML">
+                Goto Companys List!
+            </button>
         
         </section>
     </main>
